--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,9 @@
   "description": "NoteBox - Your notes on the cloud ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+     "start": "node index.js",
+    "server": "nodemon backend/index.js"
+    
   },
   "author": "",
   "license": "ISC",
