--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,13 +7,13 @@
     "start": "node index.js",
     "server": "nodemon backend/index.js",
     "build": "npm install --production"
-    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
